--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -16,12 +17,12 @@
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.0",
     "react": "^18.1.0",
-    "react-native": "^0.70.0",
+    "react-native": "^0.70.5",
     "react-native-camera-kit": "^13.0.0",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-material": "^0.0.4",
     "react-native-permissions": "^3.6.1",
-    "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-screens": "~3.15.0",
+    "react-native-screens": "^3.18.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
