--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
+    "axios": "^1.2.0",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.0",
     "react": "^18.1.0",
