--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-material": "^0.0.4",
     "react-native-permissions": "^3.6.1",
     "react-native-screens": "^3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-barcode-scanner": "~12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
