--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.2.0",
     "expo": "^47.0.0",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-native": "^0.70.5",
     "react-native-camera-kit": "^13.0.0",
@@ -24,8 +26,7 @@
     "react-native-material": "^0.0.4",
     "react-native-permissions": "^3.6.1",
     "react-native-screens": "^3.18.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-barcode-scanner": "~12.1.0"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
